--- a/examples/smoke/index.html
+++ b/examples/smoke/index.html
@@ -19,11 +19,11 @@
 <body>
 <div id="container">
   <div id="title">
-    <h1>WebGL Smoke Demo</h1>
+    <h1>WebGL Particle Smoke Demo</h1>
 
     <div class="description">
       This example demonstrates the ability to calculate an simple physical model using GPU. <br/>
-      131072 particles are emitted in a zero-divergence velocity field.
+      Particles are emitted in a zero-divergence velocity field.
     </div>
   </div>
 
